--- a/package.json
+++ b/package.json
@@ -15,27 +15,26 @@
     "@types/jsonwebtoken": "^9.0.10",
     "bcryptjs": "^2.4.3",
     "critters": "^0.0.23",
+    "form-data": "^4.0.5",
     "framer-motion": "^10.16.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
+    "mailgun.js": "^12.7.0",
     "next": "^14.0.0",
     "next-auth": "^4.24.0",
-    "nodemailer": "^6.10.1",
     "react": "^18.3.1",
     "react-compare-image": "^3.4.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.0",
     "react-hook-form": "^7.47.0",
     "recharts": "^2.8.0",
-    "resend": "^4.6.0",
     "zod": "^3.22.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.0.0",
-    "@types/nodemailer": "^6.4.0",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.21",
